Using bower for dependencies. Fixed up some small issues. Fixed page being too wide.

--- a/css/chewy.less
+++ b/css/chewy.less
@@ -47,7 +47,7 @@ header[role="banner"] {
 body {
     background-color: @bg-color;
     color: black;
-    background-image: url('https://photos-1.dropbox.com/t/0/AAAT3N2Uu1iLmYlYkoqgIIXfa89szO4T6DOKfG2C2xJqVQ/12/20209187/jpeg/1024x768/3/1382144400/0/2/brickbg_2.jpg/o0CL1fXyxbviQHpNMaXRB6wp-eKRr0fM3j6Ryl2z24A');
+    // background-image: url('https://photos-1.dropbox.com/t/0/AAAT3N2Uu1iLmYlYkoqgIIXfa89szO4T6DOKfG2C2xJqVQ/12/20209187/jpeg/1024x768/3/1382144400/0/2/brickbg_2.jpg/o0CL1fXyxbviQHpNMaXRB6wp-eKRr0fM3j6Ryl2z24A');
     background-size: cover;
 }
 
